# recipera

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
api/: pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 6886f7d6d4a7_add_recipe_fields.py  6e6d9fff715a_add_steps_table_and_relationship_to_.py  8c9821941e74_add_tags_and_relationship_to_recipes.py  9c59e5aa650a_create_recipes_table.py  a32fdc060d43_add_ingredients_table_and_connection_.py
api/src/recipera_api/: __init__.py  config.py  main.py
api/src/recipera_api/db/: models.py  session.py
api/src/recipera_api/routers/: recipes.py
api/src/recipera_api/schemas/: recipe.py
api/src/recipera_api/services/: catalogue.py  helpers.py  recipe.py  slug.py
api/tests/: conftest.py
api/tests/api/: test_recipes.py
api/tests/services/: test_catalogue.py  test_normalize_name.py  test_slug.py
cli/: pyproject.toml
cli/src/recipera_cli/: __init__.py
