[project]
name = "recipera-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Filip Kafka", email = "filip.kafka@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "cooklang-py>=1.0.1",
    "fastapi>=0.139.0",
    "httpx2>=2.7.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
