[project]
name = "recipera-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Filip Kafka", email = "filip.kafka@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.26.8",
]

[project.scripts]
recipera-cli = "recipera_cli.main:app"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
